RESOLVED FIXED142153
BytecodeGenerator shouldn't emit op_resolve_scope as a roundabout way of returning the scopeRegister
https://bugs.webkit.org/show_bug.cgi?id=142153
Summary BytecodeGenerator shouldn't emit op_resolve_scope as a roundabout way of retu...
Filip Pizlo
Reported 2015-03-01 12:52:17 PST
Currently sometimes BytecodeGenerator will emit an op_resolve_scope with the LocalClosureVar mode and 0 as the scope depth, which ultimately gets turned into an operation that just moves the scopeRegister() to the result. In cases like that, BytecodeGenerator should just use the scopeRegister() directly and not emit anything for scope resolution.
Attachments
the patch (17.43 KB, patch)
2015-03-01 12:53 PST, Filip Pizlo
msaboff: review+
Filip Pizlo
Comment 1 2015-03-01 12:53:15 PST
Created attachment 247637 [details] the patch Not quite ready for review yet, still need to run debug tests.
Filip Pizlo
Comment 2 2015-03-01 13:04:24 PST
Running more tests now. It's looking good. I will run debug and release, 32-bit and 64-bit, before landing.
Michael Saboff
Comment 3 2015-03-01 13:14:06 PST
Comment on attachment 247637 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=247637&action=review r=me Pending tests pass and add ChangeLog description > Source/JavaScriptCore/ChangeLog:7 > + Please describe what the patch does?
Filip Pizlo
Comment 4 2015-03-01 13:19:58 PST
(In reply to comment #3) > Comment on attachment 247637 [details] > the patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=247637&action=review > > r=me > Pending tests pass and add ChangeLog description > > > Source/JavaScriptCore/ChangeLog:7 > > + > > Please describe what the patch does? Yup, added locally.
Filip Pizlo
Comment 5 2015-03-01 18:09:20 PST
Note You need to log in before you can comment on or make changes to this bug.